Ajustar módulo llegada y juego
